--- a/templates/partials/_related-projects.html
+++ b/templates/partials/_related-projects.html
@@ -1,6 +1,6 @@
 {% if relatedProjects|length %}
   <section id="related-projects" class="related-posts">
-    <div class="row -single margin-top">
+    <div class="row -single">
       <div class="row-block">
         <div class="module text-module ">
           <h2 class="font-h2">{{ relatedProjectsTitle ?? 'Related Projects' }}</h2>
