--- a/templates/partials/_stat-header.html
+++ b/templates/partials/_stat-header.html
@@ -1,20 +1,22 @@
 {# stat header #}
-<div class="row -halves">
-  <div class="row-block">
-    <div class="module text-module  ">
-      <div class="font-h1 user-content">{{ entry.statHeader.subheader }}</div>
-      {% if filterNav is defined %}
-        {{ filterNav }}
-      {% endif %}
+<div class="stat-header{{ subheader ? '' : ' -empty' }}">
+  <div class="row -halves">
+    <div class="row-block">
+      <div class="module text-module  ">
+        <div class="font-h1 user-content">{{ subheader }}</div>
+        {% if filterNav is defined %}
+          {{ filterNav }}
+        {% endif %}
+      </div>
     </div>
-  </div>
-  <div class="row-block -snugstats">
-    {% set block = {
-      statFigure: entry.statHeader.statFigure,
-      statLabel: entry.statHeader.statLabel,
-      statFigure2: '',
-      statLabel2: '',
-    } %}
-    {% include 'partials/media-blocks/_stat' %}
+    <div class="row-block -snugstats{{ (statFigure ~ statLabel)!='' ? '' : ' -empty' }}">
+      {% set block = {
+        statFigure: statFigure,
+        statLabel: statLabel,
+        statFigure2: '',
+        statLabel2: '',
+      } %}
+      {% include 'partials/media-blocks/_stat' %}
+    </div>
   </div>
 </div>
