remove more spacing

--- a/templates/projects/_entry.html
+++ b/templates/projects/_entry.html
@@ -108,7 +108,7 @@
     </div>
 
     {% if entry.projectLeaders|length %}
-      <div class="row -single margin-top">
+      <div class="row -single">
         <div class="row-block">
           <div class="module text-module ">
             <h3 class="font-h2">Project Leaders</h3>
