--- a/templates/services/_entry.html
+++ b/templates/services/_entry.html
@@ -25,23 +25,25 @@
 {% block content %}
 
   <article class="single-service" data-id="{{ category.id }}">
-    {% include 'partials/_secondary-header'
-      with {
-        'headerImage': headerImage,
-        'headerTitle': category.title,
-      }
-    %}
-
-    {# intro #}
-    {% if category.body|striptags|trim != '' %}
-      <div class="row -halves secondary-page-intro">
-        <div class="row-block top-overlap-p">
-          <div class="page-intro module text-module background-white text-black">
-            <div class="user-content">{{ category.body }}</div>
-          </div>
+    <div class="row -use-float -halves">
+      <div class="row-block -right">
+        <div class="image-wrap -landscape">
+          {% if treatedImage %}
+            <div class="lazy image" style="background-image: url(''); background-position: center {{ headerImage.getFocalPoint()['y'] * 100 }}%" data-original="{{ treatedImage.getUrl() }}"></div>
+          {% endif %}
+        </div>
+        <div class="text-module background-{{ (headerColor ?? null) ? headerColor|lower : 'black' }} text-white font-smoothing">
+          <h1 class="font-h2 no-margin">{{ category.title }}</h1>
         </div>
       </div>
-    {% endif %}
+      <div class="row-block -left">
+        <div class="page-intro module text-module background-white text-black">
+          {% if category.body|striptags|trim != '' %}
+            <div class="user-content">{{ category.body }}</div>
+          {% endif %}
+        </div>
+      </div>
+    </div>
 
     {% set relatedProjects = craft.entries({
       section: 'projects',
