remove duplicate og meta tags in header, put addthis share block on single projects and news

--- a/templates/news/_entry.html
+++ b/templates/news/_entry.html
@@ -120,6 +120,12 @@
             </div>
           {% endif %}
 
+          <div class="meta-item -full">
+            <div class="content">
+              {% include 'partials/_share' %}
+            </div>
+          </div>
+
         </div>
       </div>
 
