--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -13,4 +13,15 @@
   <div class="copyright footer-block">&copy;{{ "now"|date("Y") }} Affiliated Engineers, Inc.</div>
 </footer>
 
+<script type="text/javascript">
+  var addthis_config = {
+    'pubid': 'ra-5522ee3d7ab8ddd8',
+    "services_compact": 'twitter,facebook,linkedin,pinterest,email',
+    "ui_cobrand": 'AEI',
+    "ui_508_compliant": true,
+    "data_ga_property": 'UA-123910148-1',
+    "data_ga_social": true
+  };
+</script>
+<script src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5522ee3d7ab8ddd8"></script>
 <script src="{{ rev('js/main.js') }}"></script>
