--- a/templates/projects/_entry.html
+++ b/templates/projects/_entry.html
@@ -100,6 +100,11 @@
               </div>
             </div>
           {% endif %}
+          <div class="meta-item -full">
+            <div class="content">
+              {% include 'partials/_share' %}
+            </div>
+          </div>
         </div>
       </div>
 
