add 40th anniversary stamp png to homepage header

--- a/templates/partials/_theater-header.html
+++ b/templates/partials/_theater-header.html
@@ -54,6 +54,9 @@
         <div class="theater-stop"><svg class="icon icon-x"><use xlink:href="#icon-x" /></svg></div>
       </div>
     {% endif %}
+    {% if stamp is defined %}
+      <img src="/assets/images/40th-anniversary-stamp.png" alt="40th Anniversary" class="stamp">
+    {% endif %}
   </div>
   <div class="row -halves theater-cover-bottom">
     <div class="row-block -right">
