--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
   {% for pageHeader in entry.pageHeader.all() %}
-    {% include '/partials/_theater-header' with { clearheader: 'yes' } %}
+    {% include '/partials/_theater-header' with { clearheader: 'yes', stamp: 'yes' } %}
   {% endfor %}
 
   {% set rowNumber = 0 %}
