--- a/web/assets/scss/pages/_homepage.scss
+++ b/web/assets/scss/pages/_homepage.scss
@@ -6,6 +6,26 @@
       margin-bottom: $beat*3;
     }
   }
+  .theater-header {
+    // Temporary 40th anniversary stamp
+    .stamp {
+      display: block;
+      position: absolute;
+      bottom: $padding-sm;
+      right: $padding-sm;
+      width: 25%;
+      height: auto;
+      @include media-md {
+        bottom: $padding-md;
+        left: $padding-md;
+        width: 15%;
+      }
+      @include media-lg {
+        bottom: $padding-lg;
+        left: $padding-lg;
+      }
+    }
+  }
 
   @include media-md {
     .theater-header {
