--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -13,7 +13,7 @@
   <div class="copyright footer-block">&copy;{{ "now"|date("Y") }} Affiliated Engineers, Inc.</div>
 </footer>
 
-<script type="text/javascript">
+<script>
   var addthis_config = {
     'pubid': '{{ getenv('ADDTHIS_PUBID') }}',
     "services_compact": 'twitter,facebook,linkedin,pinterest,email',
