--- a/templates/partials/_head.html
+++ b/templates/partials/_head.html
@@ -2,6 +2,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="format-detection" content="telephone=no">
   {% hook "seo" %}
   <link rel="canonical" href="{{ siteUrl }}">
   <link rel="stylesheet" href="{{ rev('css/main.css') }}">
