--- a/templates/partials/_related-impact.html
+++ b/templates/partials/_related-impact.html
@@ -1,5 +1,5 @@
 {% if relatedPosts|length %}
-  <section id="related-impact" class="related-posts">
+  <div id="related-impact" class="related-posts">
     <div class="row -single">
       <div class="row-block">
         <div class="module text-module ">
@@ -14,5 +14,5 @@
         </li>
       {% endfor %}
     </ul>
-  </section>
+  </div>
 {% endif %}
