--- a/templates/people/_article.html
+++ b/templates/people/_article.html
@@ -1,13 +1,15 @@
 {% set personImage = person.personImage[0] ?? null %}
 
 <article class="module person-module zoom-hover bigclicky">
-  <div class="image-wrap -square">
-  	{% if personImage %}
-  	  {% set treatedImage = craft.imager.transformImage(personImage, { width: 800 }) %}
-  	  {% if treatedImage %}
-	  	  <div class="project-image lazy image" style="background-image: url(''); background-position: center {{ personImage.getFocalPoint()['y'] * 100 }}%" data-original="{{ treatedImage.getUrl() }}"></div>
-  	  {% endif %}
-  	{% endif %}
+  <div class="image-wrap-edge">
+      <div class="image-wrap -square">
+        {% if personImage %}
+          {% set treatedImage = craft.imager.transformImage(personImage, { width: 800 }) %}
+          {% if treatedImage %}
+            <div class="project-image lazy image" style="background-image: url(''); background-position: center {{ personImage.getFocalPoint()['y'] * 100 }}%" data-original="{{ treatedImage.getUrl() }}"></div>
+          {% endif %}
+        {% endif %}
+      </div>
   </div>
   <div class="text pad">
     <h2 class="name font-p no-margin"><a href="{{ person.getUrl() }}" class="no-underline">{{ person.title }}</a></h2>
