--- a/web/assets/scss/components/_page-headers.scss
+++ b/web/assets/scss/components/_page-headers.scss
@@ -49,7 +49,7 @@
     min-height: calc((100vw - #{$padding})*9/16);
 
     .row:first-child {
-      flex-grow: 1;
+      flex: 1 1 auto;
     }
 
     .theater-hero .theater-play {
@@ -59,10 +59,6 @@
 
   @include media-lg {
     min-height: calc((66.67vw)*9/16);
-  }
-
-  @include media-xl {
-    min-height: calc((100vw - #{$sidebar-max-width})*9/16);
   }
 
   .row {
