--- a/web/assets/scss/components/_separators.scss
+++ b/web/assets/scss/components/_separators.scss
@@ -205,7 +205,7 @@
     }
 
     .text {
-      flex-grow: 1;
+      flex: 1 1 auto;
       position: relative;
       &.pad {
         padding-bottom: $padding + $beat*4;
