set project-module background to color to avoid slivers of white lines

--- a/web/assets/scss/helpers/_color-scheme.scss
+++ b/web/assets/scss/helpers/_color-scheme.scss
@@ -25,6 +25,7 @@ $colors: (
   }
 
   .project-module.color-#{$color-key} {
+    background: $color;
     &::before,
     &::after {
       background: $color;
