--- a/templates/news/_entry.html
+++ b/templates/news/_entry.html
@@ -1,7 +1,16 @@
 {% extends (craft.app.request.isAjax and not craft.app.request.isLivePreview) ? "_ajax-layout" : "_layout" %}
 {% set bodyClass = 'overlapping-header' %}
-{% set impactType = entry.impactType.one() %}
+
 {% set impactPeople = entry.impactPeople.all() %}
+{% set impactTypeIds = entry.impactType.ids() %}
+{% set presentationTypeId = craft.categories.group('impactTypes').title('Presentations').ids() %}
+{% set articleTypeId = craft.categories.group('impactTypes').title('Articles').ids() %}
+
+{% set categoryTitle = '' %}
+{% for impactType in entry.impactType %}
+  {% set categoryTitle = categoryTitle ~ impactType.title ~ (loop.index < loop.length ? ', ' : '') %}
+{% endfor %}
+
 {% set headerImage = entry.impactImage.one() %}
 {% if headerImage %}
   {% set treatedImage = craft.imager.transformImage(headerImage, { width: 1600 }) %}
@@ -15,7 +24,7 @@
   <h2 class="font-nav"><a href="/news/">News &<br>Insights</a></h2>
   <ul class="filters semantic-only-list">
     {% for cat in craft.categories.group('impactTypes').all() %}
-      <li class="{% if impactType and cat.id == impactType.id %}active{% endif %}">
+      <li class="{% if cat.id in impactTypeIds %}active{% endif %}">
         <a href="{{ cat.getUrl() }}">{{ cat.title }}</a>
       </li>
     {% endfor %}
@@ -27,7 +36,7 @@
 
     {% include 'partials/_secondary-header'
       with {
-        'categoryTitle': impactType,
+        'categoryTitle': categoryTitle,
         'headerImage': headerImage,
         'headerTitle': entry.title,
       }
@@ -42,7 +51,7 @@
       </div>
       <div class="row-block last-on-sm">
         <div class="meta">
-          {% if impactType and impactType.slug == 'presentations' %}
+          {% if presentationTypeId[0] in impactTypeIds %}
             <div class="meta-item -half {% set nHalf = nHalf ?? 0 + 1  %}{{ cycle (['-row-end',''], nHalf) }}">
               <h3>Session</h3>
               <div class="content">
@@ -98,13 +107,12 @@
               </div>
             </div>
           {% endfor %}
-
-          {% if impactType and impactType.slug == 'articles' %}
+          {% if articleTypeId[0] in impactTypeIds %}
             <div class="meta-item -full">
               <h3>Publication Date</h3>
               <div class="content">{{ entry.impactPublicationDate|date('m/d/y') }}</div>
             </div>
-          {% elseif impactType and impactType.slug != 'presentations' %}
+          {% elseif presentationTypeId[0] not in impactTypeIds %}
             <div class="meta-item -full">
               <h3>Post Date</h3>
               <div class="content">{{ entry.postDate|date('m/d/y') }}</div>
