fix news not showing up in searches

--- a/templates/search/index.html
+++ b/templates/search/index.html
@@ -23,7 +23,7 @@
             {% set projectPosts = projectPosts|merge([entry]) %}
           {% case "Offices" %}
             {% set servicePosts = servicePosts|merge([entry]) %}
-          {% case "Impact" %}
+          {% case "News & Insights" %}
             {% set impactPosts = impactPosts|merge([entry]) %}
           {% case "People" %}
             {% set peoplePosts = peoplePosts|merge([entry]) %}
