remove sidebar from 404 page

--- a/web/assets/scss/components/_layout.scss
+++ b/web/assets/scss/components/_layout.scss
@@ -24,7 +24,8 @@
   }
 }
 
-// No sidebar on Homepage/Search page
+// No sidebar on Homepage/Search/404 pages
+body#fourohfour-page,
 body.page-home,
 body.page-search {
   .right-col-wrap {
