omit sidebar on 404 page

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,7 @@
 {% extends (craft.app.request.isAjax and not craft.app.request.isLivePreview) ? "_ajax-layout" : "_layout" %}
 {% set title = "404" %}
 {% set bodyId = "fourohfour-page" %}
+{% set is404 = true %}
 
 {% block content %}
   <div class="row -full">
