--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
   <!--[if IE 9 ]> <html lang="en" class="no-js ie9 lt-ie10"> <![endif]-->
   <!--[if gt IE 9]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 
@@ -8,7 +8,8 @@
     <div id="breakpoint-indicator"></div>
     {% include '/partials/_header' %}
 
-    {% if segment(1) and segment(1) != 'search' %}
+    {# Omit sidebar completely on homepage, search, and 404 page #}
+    {% if segment(1) and segment(1) != 'search' and is404 is not defined %}
       <nav class="sidebar">
         {% block filters %}{% endblock %}
       </nav>
