--- a/templates/partials/_head.html
+++ b/templates/partials/_head.html
@@ -22,7 +22,7 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', '{{ getenv('GA_PROPERTY') }}';
+    gtag('config', '{{ getenv('GA_PROPERTY') }}');
   </script>
   {% endif %}
 
