--- a/plugins/aei/src/templates/logs.twig
+++ b/plugins/aei/src/templates/logs.twig
@@ -24,9 +24,9 @@
 {# Content that should appear in the page header #}
 {% block actionButton %}
     <div class="buttons">
+      <a href="{{ url('aei/reorder') }}" class="btn submit">{{ "Reorder Projects"|t('aei') }}</a>
         <a href="{{ url('aei') }}" class="btn submit">{{ "Importer"|t('aei') }}</a>
         <a href="/admin/settings/plugins/aei" class="btn submit">{{ "Settings"|t('aei') }}</a>
-        {# <a href="/admin/utilities/asset-indexes" class="btn submit">{{ "Asset Indexes"|t('aei') }}</a> #}
     </div>
 {% endblock %}
 
