--- a/templates/projects/index.html
+++ b/templates/projects/index.html
@@ -3,7 +3,7 @@
 {% set stats = [] %}
 
 {% if category is defined %}
-
+  {% set projectIdArr = category.projectIds|split(',') %}
   {% paginate craft.entries({
     section: 'projects',
     relatedTo: category,
@@ -12,7 +12,7 @@
       'markets',
       'projectImage'
     ]
-  }).limit(20) as paginationInfo, projectEntries %}
+  }).id(projectIdArr).fixedOrder().limit(20) as paginationInfo, projectEntries %}
 
   {% set title = category.title %}
   {% set subheader = category.body %}
